Fix layout for nav and search alignment

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -55,8 +55,8 @@ h3 { font-size: 1.1rem; }
 }
 
 .site-sidebar {
-  margin-bottom: 2rem;
-  padding-bottom: 1rem;
+  margin-bottom:0;
+  /* padding-bottom: 1rem; */
   /* border-bottom: 1px solid var(--border); */
 }
 
